--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -4,11 +4,13 @@ body, html {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden; /* Prevents scrolling */
 }
 
 #__next {
   width: 100%;
   height: 100%;
+  overflow: hidden; /* Ensures no overflow within the next.js container */
 }
 
 #map {
