--- a/src/app/components/mobilecontrols/MobileControls.css
+++ b/src/app/components/mobilecontrols/MobileControls.css
@@ -64,6 +64,7 @@
     font-weight: bold;
     padding: 15px 25px;
     box-sizing: border-box;
+    border-radius: 8px;
     transition: background-color 0.3s ease; /* Smooth transition for hover */
   }
   
