--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,10 +1,12 @@
 /* styles/globals.css */
+
 body, html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   overflow: hidden; /* Prevents scrolling */
+  font-family: 'Inter', sans-serif; /* Apply Inter globally */
 }
 
 #__next {
